# pyribs

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .project  .pylintrc  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  boe_test.py  cvt3d.py  mkdocs.yml  pyproject.toml  pytest_benchmark.ini  pytest_no_benchmark.ini  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: install.yml  testing.yml
_templates/: sourcelink.html
_templates/autosummary/: class.rst
benchmarks/: README.md  benchmark.py  benchmarks.py  centroid_quality.py  cvt_add.py
docs/: 404.md  Makefile  api.rst  conf.py  configuration.md  configuration.rst  contributing.md  contributing.rst  examples.md  getting-started.ipynb  getting-started.md  getting-started.rst  history.rst  index.md  index.rst  installation.rst  make.bat  migrating-old.md  migrating.ipynb  migrating.md  modindex.md  modules.rst  readme.rst  readme_assets  ribs.archives.md  ribs.archives.rst  ribs.config.md  ribs.config.rst  ribs.emitters.md  ribs.emitters.rst  ribs.factory.rst  ribs.optimizers.md  ribs.optimizers.rst  ribs.rst  ribs.visualize.rst  supported-algorithms.md  tutorials.md  usage.md  usage.rst  whats-new.md
docs/_ext/: colab_link.py  github_links.py  minify.py  minify_html_files.py
docs/_static/: custom.css
docs/_templates/: layout.html  sourcelink.html
docs/api/: ribs.discount_models.rst  ribs.emitters.operators.rst  ribs.emitters.opt.rst  ribs.emitters.rankers.rst  ribs.emitters.selectors.rst  ribs.optimizers.rst  ribs.schedulers.rst  ribs.typing.rst
docs/examples/: bop_elites.md  cqd_score.md  lunar_lander.md  run_sphere.md  sphere.md
docs/whats-new/: v0.5.0.md  v0.7.0.md  v0.8.0.md
examples/: .gitignore  README.md  bop_elites.py  cqd_score.py  dogs.py  evolution_strategy.py  lunar_lander.py  lunar_lander_cvt.py  lunar_lander_model.csv  optimizers.py  requirements.txt  run_sphere.py  run_sphere_cvt.py  run_sphere_cvt_iso_line.py  sphere.py  sphere_1d.py  sphere_1d_simple.py  sphere_multirun.py  sphere_original.py
examples/benchmark_funcs/: run_sphere.py  run_sphere_cvt.py
examples/performance/: cvt_add.py
examples/tools/: train_mnist_classifier.py
examples/tutorials/: DQDTutorial.ipynb  arm_repertoire.ipynb  cma_mae.ipynb  dqd_dogs.ipynb  fooling_mnist.ipynb  inverse_kinematics.ipynb  lsi_mnist.ipynb  lunar_lander.ipynb  lunar_lander_copy.ipynb  pyribs_overview.ipynb  tom_cruise_dqd.ipynb  training_mnist.ipynb
numba_tests/: numba_two_archives_test.ipynb
pinned_reqs/: README.md  extras_all.txt  extras_visualize.txt  install.txt
ribs/: __init__.py  _docstrings.py  _utils.py  config.py  discount_models.py  factory.py  typing.py  visualize.py
ribs/archives/: __init__.py  _add_status.py  _archive_base.py  _archive_base_2.py  _archive_data_frame.py  _archive_dataframe.py  _archive_stats.py  _array_store.py  _categorical_archive.py  _cqd_score.py  _cqd_score_result.py  _cvt_archive.py  _density_archive.py  _discount_archive.py  _dns_archive.py  _elite.py  _elite_table.py  _fake_archive.py  _grid_archive.py  _individual.py  _nearest_neighbor_archive.py  _old_grid_archive.py  _proximity_archive.py  _sliding_boundaries_archive.py  _sliding_boundary_archive.py  _torchist.py  _transforms.py  _unstructured_archive.py  _utils.py  centroids.py  grid_archive.py  transforms.py
ribs/emitters/: __init__.py  _bayesian_opt_emitter.py  _bayesian_optimization_emitter.py  _dqd_emitter_base.py  _emitter_base.py  _evolution_strategy_emitter.py  _gaussian_emitter.py  _genetic_algorithm_emitter.py  _gradient_aborescence_emitter.py  _gradient_arborescence_emitter.py  _gradient_emitter.py  _gradient_operator_emitter.py  _improvement_emitter.py  _iso_line_emitter.py  _optimizing_emitter.py  _random_direction_emitter.py  gaussian_emitter.py  genetic_algorithm_emitter.py  rankers.py  selectors.py
ribs/optimizers/: __init__.py  _optimizer.py  optimizer.py
ribs/schedulers/: __init__.py  _bandit_scheduler.py  _bayesian_opt_scheduler.py  _scheduler.py
ribs/visualize/: __init__.py  _cvt_archive_3d_plot.py  _cvt_archive_heatmap.py  _grid_archive_heatmap.py  _parallel_axes_plot.py  _proximity_archive_plot.py  _qdax_repertoire_heatmap.py  _sliding_boundaries_archive_heatmap.py  _utils.py  _visualize_qdax.py
tests/: .pylintrc  README.md  README.rst  __init__.py  config_test.py  conftest.py  examples.sh  factory_test.py  test_ribs.py  torch_not_available_test.py  tutorials.sh  tutorials_list.sh  visualize_test.py
tests/archives/: README.md  add_status_test.py  archive_base_test.py  archive_data_frame_test.py  archive_threshold_update_test.py  array_store_test.py  categorical_archive_test.py  conftest.py  cqd_score_test.py  custom_fields_test.py  cvt_archive_benchmark.py  cvt_archive_test.py  density_archive_test.py  dns_archive_test.py  elite_table_test.py  grid_archive_benchmark.py  grid_archive_test.py  grid_unstructured_archive_test.py  individual_benchmark.py  individual_test.py  k_means_centroids_test.py  proximity_archive_test.py  sliding_boundaries_archive_benchmark.py  sliding_boundaries_archive_test.py  transforms_test.py  unstructured_archive_test.py
tests/archives_torch/: discount_archive_test.py
tests/core/: config_test.py  factory_test.py
tests/discount_models/: discount_model_manager_test.py  mlp_test.py
tests/emitters/: cma_me_emitter_test.py  conftest.py  emitter_base_test.py  evolution_strategy_emitter_test.py  gaussian_emitter_benchmark.py  gaussian_emitter_test.py  genetic_algorithm_emitter_test.py  gradient_aborescence_emitter_test.py  rankers_test.py  (+7 more)
tutorials/: README.md  arm_repertoire.ipynb  centroid_methods.ipynb  cma_mae.ipynb  cvt_centroids.ipynb  dds.ipynb  dds_cppn.ipynb  fooling_mnist.ipynb  lsi_mnist.ipynb  lunar_lander.ipynb  lunar_lander_mae.ipynb  ns_maze.ipynb  optuna.md  qdaif.ipynb  qdhf.ipynb  scalable_cma_mae.ipynb  tom_cruise_dqd.ipynb
(+78 files in other folders)
