[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ribs"
dynamic = ["version", "readme"]
authors = [
  { name = "ICAROS Lab pyribs Team", email = "team@pyribs.org" },
]
description = "A bare-bones Python library for quality diversity optimization."
license = "MIT"
keywords = ["ribs", "quality diversity", "optimization"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9.0"
dependencies = [
  # numpy>=1.17.0 is when default_rng becomes available;
  # scikit-learn 1.1.0 requires numpy 1.17.3+
  "numpy>=1.17.3",
  "numpy_groupies>=0.9.16",  # Supports Python 3.7 and up.
  "numba>=0.51.0",
  "pandas>=1.0.0",
  "sortedcontainers>=2.0.0",  # Primarily used in SlidingBoundariesArchive.
  "scikit-learn>=1.1.0",  # Primarily used in CVTArchive.
  "scipy>=1.7.0",  # Primarily used in CVTArchive.
  "threadpoolctl>=3.0.0",
]

[project.optional-dependencies]
visualize = [
  "matplotlib>=3.0.0",
  "shapely>=2.0.0",
]
all = [
  ### visualize ###
  "matplotlib>=3.0.0",
  "shapely>=2.0.0",

  ### Extra dependencies used by various components. ###
  "cma",
  "pymoo",
]
dev = [
  # Tools
  "isort",
  "ruff",
  "pylint",
  "pre-commit",

  # Testing
  "python-box[all]~=7.0",
  "pytest==8.3.5",
  "pytest-cov==6.0.0",
  "pytest-benchmark==5.1.0",
  "pytest-xdist==3.6.1",

  # Documentation
  "myst-nb==1.3.0",
  "Sphinx==8.1.3",
  "sphinx-autobuild==2021.3.14",
  "sphinx-autodoc-typehints==3.0.1",
  "sphinx-jinja2-compat==0.4.1",
  "sphinx-prompt==1.9.0",
  "sphinx-tabs==3.4.5",
  "sphinx-toolbox==4.0.0",
  "sphinx_immaterial==0.13.5",
  "sphinxcontrib-applehelp==2.0.0",
  "sphinxcontrib-devhelp==2.0.0",
  "sphinxcontrib-htmlhelp==2.1.0",
  "sphinxcontrib-jsmath==1.0.1",
  "sphinxcontrib-qthelp==2.0.0",
  "sphinxcontrib-serializinghtml==2.0.0",
  "minify-html==0.15.0",
  "beautifulsoup4==4.13.4",

  # Distribution
  "build",
  "check-wheel-contents",
  "twine",
]

[project.urls]
Homepage = "https://pyribs.org"
Repository = "https://github.com/icaros-usc/pyribs"
Documentation = "https://docs.pyribs.org"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ribs", "ribs.*"]

[tool.setuptools.dynamic]
version = {attr = "ribs.__version__"}
readme = {file = ["README.md", "HISTORY.md"], content-type = "text/markdown"}

[tool.isort]
known_first_party = "ribs"
line_length = 88
multi_line_output = 3  # Matches ruff.
include_trailing_comma = true  # Matches ruff.

[tool.pytest.ini_options]
python_files = "*_test.py"
python_functions = "test_*"
addopts = "-v --cov-report term-missing --cov=ribs"
markers = "style"
